# dspy-react-machina

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  RELEASE.md  pyproject.toml
examples/: dspy_react_chat_example.py  instrumentation.py  quickstart.py  react_machina_chat_example.py
src/dspy_react_machina/: __init__.py
src/scripts/: quality_check.py  test_runner.py
tests/: TESTING_CONVENTIONS.md
tests/dspy_react_machina/: test_adapter.py  test_conversation.py  test_exceptions.py  test_react_machina.py  test_signatures.py  test_state_machine.py  test_tools.py
