[project]
name = "dspy-react-machina"
version = "0.1.0"
description = "Alternative ReAct implementation for DSPy"
readme = "README.md"
authors = [
    { name = "Arthur Moura Carvalho", email = "armoucar@gmail.com" }
]
requires-python = ">=3.10, <3.14"
dependencies = [
    "dspy>=3.0.0",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
